--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <button onclick="alert('¶àË§Å¶À¤À¤£¡£¡£¡')">µãÎÒÅ¶£¡</button>
+  <button onclick="alert('Hey gay,Nice to meet you!')">Click CLick Click!!!</button>
 </html>
