--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <button onclick="alert('Hey gay,Nice to meet you!')">Click CLick Click!!!</button>
+	<head>
+		<meta charset="UTF-8">
+		<title></title>
+	</head>
+	<body>
+		多帅哦
+		<video width="800" height="600" controls="controls">
+			<source src="video/Look What You Make Me Do.mp4" type="video/mp4"></source>
+			当前浏览器不支持 video直接播放，点击这里下载视频： <a href="video/Look What You Make Me Do.mp4"">下载视频</a>
+		</video>
+	</body>
 </html>
