--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="homeBody">
 		<div class="homeImgWall" id="homeImgWall"></div>	
 	</div>
-	<h1>Hello,叶波！</h1>
+	<h1 style="display:hidden;">Hello,叶波！</h1>
 	
 </div>
 </body>
